@@ -225,11 +225,6 @@
    </dependency>
    <dependency>
     <groupId>org.geotools</groupId>
-    <artifactId>gt-api</artifactId>
-    <version>${gt.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>org.geotools</groupId>
     <artifactId>gt-main</artifactId>
     <version>${gt.version}</version>
    </dependency>
@@ -322,11 +317,6 @@
    <dependency>
     <groupId>org.geotools</groupId>
     <artifactId>gt-shapefile</artifactId>
-    <version>${gt.version}</version>
-   </dependency>
-   <dependency>
-    <groupId>org.geotools</groupId>
-    <artifactId>gt-data</artifactId>
     <version>${gt.version}</version>
    </dependency>
    <dependency>
@@ -618,7 +608,7 @@
    <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
-    <version>4.11</version>
+    <version>4.12</version>
     <scope>test</scope>
    </dependency>
    <dependency>
@@ -644,12 +634,12 @@
    <dependency>
     <groupId>org.easymock</groupId>
     <artifactId>easymock</artifactId>
-    <version>3.1</version>
+    <version>3.6</version>
    </dependency>
    <dependency>
     <groupId>org.easymock</groupId>
     <artifactId>easymockclassextension</artifactId>
-    <version>2.5.2</version>
+    <version>3.2</version>
    </dependency>
    <dependency>
     <groupId>cglib</groupId>
@@ -664,7 +654,7 @@
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
-     <version>1.8.5</version>
+     <version>2.23.0</version>
    </dependency>    
    <dependency>
      <groupId>xalan</groupId>
@@ -746,7 +736,7 @@
    <dependency>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-lang3</artifactId>
-    <version>3.7</version>
+    <version>3.8.1</version>
    </dependency>
    <dependency>
     <groupId>commons-validator</groupId>
@@ -1108,9 +1098,14 @@
    </dependency>
 
    <dependency>
-   <groupId>javax.mail</groupId>
+     <groupId>javax.mail</groupId>
      <artifactId>mail</artifactId>
      <version>1.4</version>
+   </dependency>
+   <dependency>
+    <groupId>javax.activation</groupId>
+    <artifactId>javax.activation-api</artifactId>
+    <version>1.2.0</version>
    </dependency>
    <dependency>
      <groupId>javax.activation</groupId>
@@ -1182,7 +1177,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>25.1-jre</version>
+      <version>27.0-jre</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
@@ -1264,7 +1259,7 @@
     <dependency>
       <groupId>no.ecc.vectortile</groupId>
       <artifactId>java-vector-tile</artifactId>
-      <version>1.3.1</version>
+      <version>1.3.3</version>
     </dependency>
     <dependency>
       <groupId>com.ning</groupId>
@@ -1325,6 +1320,42 @@
        </exclusion>
      </exclusions>
    </dependency>
+  <dependency>
+    <groupId>org.apache.directory.server</groupId>
+    <artifactId>apacheds-all</artifactId>
+    <version>1.5.7</version>
+  </dependency>
+  <dependency>
+    <groupId>javax.xml.bind</groupId>
+    <artifactId>jaxb-api</artifactId>
+    <version>2.4.0-b180830.0359</version>
+  </dependency>
+  <dependency>
+    <groupId>org.glassfish.jaxb</groupId>
+    <artifactId>jaxb-runtime</artifactId>
+    <version>2.4.0-b180830.0438</version>
+  </dependency>
+  <dependency>
+    <groupId>javax.annotation</groupId>
+    <artifactId>javax.annotation-api</artifactId>
+    <version>1.3.1</version>
+  </dependency>
+  <dependency>
+    <groupId>com.hazelcast</groupId>
+    <artifactId>hazelcast</artifactId>
+    <version>${hazelcast.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>com.hazelcast</groupId>
+    <artifactId>hazelcast</artifactId>
+    <version>${hazelcast.version}</version>
+    <classifier>tests</classifier>
+  </dependency>
+  <dependency>
+    <groupId>com.hazelcast</groupId>
+    <artifactId>hazelcast-spring</artifactId>
+    <version>${hazelcast.version}</version>
+  </dependency>
   </dependencies>
  </dependencyManagement>
 
@@ -1344,10 +1375,6 @@
   <dependency>
    <groupId>org.springframework</groupId>
    <artifactId>spring-webmvc</artifactId>
-  </dependency>
-  <dependency>
-   <groupId>org.geotools</groupId>
-   <artifactId>gt-api</artifactId>
   </dependency>
   <dependency>
    <groupId>org.geotools</groupId>
@@ -1491,6 +1518,7 @@
      <printSummary>true</printSummary>
      <testFailureIgnore>${allow.test.failure.ignore}</testFailureIgnore>
      <excludedGroups>${test.excludedGroups}</excludedGroups>
+     <argLine>${argLine} -XX:+IgnoreUnrecognizedVMOptions --illegal-access=debug</argLine>
     </configuration>
    </plugin>
 
@@ -1911,16 +1939,16 @@
   <gt.version>21-SNAPSHOT</gt.version>
   <gwc.version>1.15-SNAPSHOT</gwc.version>
   <jts.version>1.16.0</jts.version>
-  <spring.version>4.3.18.RELEASE</spring.version>
-  <spring.security.version>4.2.7.RELEASE</spring.security.version>
+  <spring.version>5.1.1.RELEASE</spring.version>
+  <spring.security.version>5.1.1.RELEASE</spring.security.version>
   <servlet-api.version>3.0.1</servlet-api.version>
-  <jetty.version>9.2.13.v20150730</jetty.version>
+  <jetty.version>9.4.12.v20180830</jetty.version>
   <jetty.servlet-api.version>3.1.0</jetty.servlet-api.version>
-  <poi.version>3.17</poi.version>
+  <poi.version>4.0.0</poi.version>
   <wicket.version>7.6.0</wicket.version>
   <ant.version>1.8.4</ant.version>
-  <imageio-ext.version>1.1.25</imageio-ext.version>
-  <jaiext.version>1.1.1</jaiext.version>
+  <imageio-ext.version>1.2.0</imageio-ext.version>
+  <jaiext.version>1.1.3</jaiext.version>
   <java.awt.headless>true</java.awt.headless>
   <sun.java2d.d3d>true</sun.java2d.d3d>
   <jvm.opts></jvm.opts>
@@ -1939,7 +1967,7 @@
   <image.tests>true</image.tests>
   <interactive.image>false</interactive.image>
   <windows.leniency>true</windows.leniency>
-  <gf.version>3.4.1</gf.version>
+  <gf.version>3.4.2</gf.version>
   <jasypt.version>1.9.2</jasypt.version>
   <hibernate-version>3.6.9.Final</hibernate-version>
   <hibernate-generic-dao-version>1.1.0</hibernate-generic-dao-version>
@@ -1952,13 +1980,14 @@
   <git.commit.useNative>false</git.commit.useNative>
   <git.commit.runOnlyOnce>true</git.commit.runOnlyOnce>
   <jackson1.version>1.9.13</jackson1.version>
-  <jackson2.version>2.9.5</jackson2.version>
+  <jackson2.version>2.9.7</jackson2.version>
   <compress-lzf.version>1.0.3</compress-lzf.version>
-  <marlin.version>0.7.5-Unsafe</marlin.version>
+  <marlin.version>0.9.3</marlin.version>
   <postgresql.jdbc.version>42.1.1</postgresql.jdbc.version>
   <postgis.jdbc.version>1.3.3</postgis.jdbc.version>
   <solrj.version>7.2.1</solrj.version>
   <jacoco.version>0.8.1</jacoco.version>
+  <hazelcast.version>3.11-BETA-1</hazelcast.version>
   <argLine>-Xmx${test.maxHeapSize} -enableassertions ${jvm.opts} -Djava.awt.headless=${java.awt.headless} -Dsun.java2d.d3d=${sun.java2d.d3d} -DremoteOwsTests=${remoteOwsTests} -DquietTests=${quietTests} -Dorg.geotools.image.test.enabled=${image.tests} -Dorg.geotools.image.test.interactive=${interactive.image} -Duser.timezone=${user.timezone} -Dwindows.leniency=${windows.leniency} -XX:+TieredCompilation -XX:TieredStopAtLevel=1</argLine>
   <fmt.action>format</fmt.action>
   <fmt.skip>false</fmt.skip>
@@ -2037,7 +2066,7 @@
             </goals>
             <configuration>
               <includeGroupIds>org.geotools,org.geowebcache</includeGroupIds>
-              <includeArtifactIds>gt-api,gwc-core</includeArtifactIds>
+              <includeArtifactIds>gwc-core</includeArtifactIds>
             </configuration>
           </execution>
         </executions>
@@ -2065,9 +2094,6 @@
           <phase>package</phase>
           <configuration>
             <tasks>
-               <loadproperties prefix="gt">
-                  <zipentry zipfile="target/dependency/gt-api-${gt.version}.jar" name="META-INF/MANIFEST.MF"/>
-               </loadproperties>
                <loadproperties prefix="gwc">
                   <zipentry zipfile="target/dependency/gwc-core-${gwc.version}.jar" name="META-INF/MANIFEST.MF"/>
                </loadproperties>
